--- a/index2.html
+++ b/index2.html
@@ -11,8 +11,8 @@
         <h1>Predictive Maintenance Dashboard</h1>
         <div class="machines">
             <h2>Machines</h2>
-            <button class="machine-btn" onclick="redirectToAlerts('Pump1')"><i class="fas fa-cogs"></i> Pump 1</button>
-            <button class="machine-btn" onclick="redirectToAlerts('Valve2')"><i class="fas fa-wrench"></i> Valve 2</button>
+            <button class="machine-btn" onclick="redirectToAlerts('Pump1')"><i class="fas fa-cogs"></i> CNC </button>
+            <button class="machine-btn" onclick="redirectToAlerts('Valve2')"><i class="fas fa-wrench"></i> Hydrostatic Test Rig</button>
             <!-- Add more machine buttons as needed -->
         </div>
     </div>
