--- a/alerts.html
+++ b/alerts.html
@@ -9,11 +9,11 @@
 <body>
     <div class="container">
         <h1>Predictive Maintenance Alerts</h1>
-        <div class="alerts-list">
+        <div class="alerts-list" id="alertsList">
             <h2>Alerts for Machine: <span id="machineName"></span></h2>
-            <ul id="alertsList"></ul>
-            <button class="back-btn" onclick="goBack()">Back to Dashboard</button>
+            <!-- Alerts will be dynamically added here -->
         </div>
+        <button class="back-btn" onclick="goBack()">Back to Dashboard</button>
     </div>
     <script src="script.js"></script>
 </body>
