--- a/index.html
+++ b/index.html
@@ -11,11 +11,12 @@
         <h1>Predictive Maintenance Dashboard</h1>
         <div class="machines">
             <h2>Machines</h2>
-            <button class="machine-btn" onclick="redirectToAlerts('Pump1')"><i class="fas fa-cogs"></i> CNC </button>
-            <button class="machine-btn" onclick="redirectToAlerts('Valve2')"><i class="fas fa-wrench"></i> Hydrostatic Test Rig</button>
+            <button class="machine-btn" onclick="redirectToAlerts('Pump1')"><i class="fas fa-cogs"></i> Pump 1</button>
+            <button class="machine-btn" onclick="redirectToAlerts('Valve2')"><i class="fas fa-wrench"></i> Valve 2</button>
             <!-- Add more machine buttons as needed -->
         </div>
     </div>
+    <div class="alert-container" id="alertContainer"></div>
     <script src="https://kit.fontawesome.com/a076d05399.js"></script>
     <script src="script.js"></script>
 </body>
